--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ openai==1.45.0
 packaging==24.1
 passlib==1.7.4
 pluggy==1.5.0
+psycopg2-binary==2.9.6
 pyasn1==0.6.1
 pydantic==2.9.1
 pydantic_core==2.23.3
