--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -13,14 +13,8 @@ RUN npm install
 # Copy the rest of the application code
 COPY . .
 
-# Build the app
-RUN npm run build
-
-# Install serve to run the application
-RUN npm install -g serve
-
 # Expose the port the app runs on
 EXPOSE 5173
 
-# Command to run the application
-CMD ["serve", "-s", "dist", "-l", "5173"]
+# Command to run the application in development mode
+CMD ["npm", "run", "dev", "--", "--host"]
