--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ openai==1.45.0
 packaging==24.1
 passlib==1.7.4
 pluggy==1.5.0
+psutil==7.0.0
 psycopg==3.1.18
 pyasn1==0.6.1
 pydantic==2.9.1
@@ -24,6 +25,7 @@ pytest==8.3.3
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.9
+redis==5.0.1
 rsa==4.9
 six==1.16.0
 sniffio==1.3.1
